# quick_inspect

./: .gitignore  PRODUCTION_CHECKLIST.md  README.md  package.json  vercel.json
PC/: .env.example  .gitignore  app.config.ts  app.json  design-system.md  eas.json  env.d.ts  package-lock.json  package.json
PC/app/: _layout.tsx  home.tsx  index.tsx  login.tsx  logo-intro.tsx  modal.tsx  sign-up-password.tsx  sign-up.tsx
PC/components/: frosted-card.tsx  inspection-bento.tsx  ios-style-toast.tsx
PC/constants/: theme.ts
PC/context/: auth-session.tsx  selected-region.tsx  sign-up-draft.tsx
PC/docs/: design-system.md
PC/hooks/: useKeyboardAvoidingOffset.ts  useResponsive.ts
PC/lib/: auth-api.ts  dashboard-api.ts
PC/theme/: calm.ts  gh-mmda-by-region.ts  gh-regions.ts  inspection-entry-types.ts  inspector-display.ts  recent-inspections.ts
backend/: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  railway.toml  requirements.txt
backend/app/: __init__.py  config.py  database_defaults.py  db.py  deps.py  jwt_defaults.py  jwt_util.py  main.py  password_util.py  pg_errors.py  schema_bootstrap.py
backend/app/routers/: auth.py  checklists.py  facilities.py  health.py  inspections.py
backend/migrations/: 000_legacy_schema_repair.sql  001_init.sql  001z_inspectors_auth_bridge.sql  002_timestamp_defaults.sql  004_legacy_api_columns.sql
backend/scripts/: migrate.py  run_local.sh
public/: index.html  robots.txt
server/: .env.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vercel.json
(+53 files in other folders)
