[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app"]

[project]
name = "quik-inspect-api"
version = "0.1.0"
description = "Quik Inspect REST API (FastAPI + Neon PostgreSQL)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "asyncpg>=0.30.0",
  "PyJWT[crypto]>=2.9.0",
  "bcrypt>=4.2.0",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "email-validator>=2.0.0",
]

[tool.vercel]
entrypoint = "app.main:app"
